[package]
name = "Learn-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "hello_world"
path = "src/Hello-World/main.rs"

[[bin]]
name = "comments"
path = "src/Comments/comments.rs"

[[bin]]
name = "1-f"
path = "src/1-First-Program/first.rs"

[[bin]]
name = "2-f"
path = "src/2-dT/dtypes.rs"

[[bin]]
name = "3-f"
path = "src/3-strings/3-string.rs"

[[bin]]
name = "4-f"
path = "src/4-Operators/op.rs"

[[bin]]
name = "41-f"
path = "src/4-Operators/lp.rs"

[[bin]]
name = "5-f"
path = "src/5-functions/func.rs"

[[bin]]
name = "6-f"
path = "src/6-Tuples/tp.rs"

[[bin]]
name = "7-f"
path = "src/7-arrays/arr.rs"

[[bin]]
name = "8-f"
path = "src/8-shadowing/shadow.rs"

[[bin]]
name = "9-f"
path = "src/9-miscControlFlow/misc.rs"

[[bin]]
name = "10-f"
path = "src/10-StackHEAP/stack-heap.rs"

[[bin]]
name = "ownership"
path = "src/Udemy/ownership.rs"

[[bin]]
name = "slice"
path = "src/Udemy/slices.rs"